# AmazonScraper

./: .gitignore  README.md  amazon.ipynb  pyproject.toml
amazon/: amazon-scraping-result.html  amazon.ipynb  amazon.py
src/amazonscraper/: amazon.py  search_result.py
