[tool.poetry]
name = "price-comparison"
version = "0.1.0"
description = ""
authors = ["Krish Shah <shahkrish2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autoscraper = "^1.1.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
